# SkillBench

./: .env.example  .gitignore  CLAUDE.md  README.md  compose.dev.yml  compose.judge0.yml  compose.prod.yml  compose.yml  setup.sh
backend/: .dockerignore  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_auth_rbac.py  0002_core_entities.py  0003_scheduling.py  0004_attempts.py  0005_results.py  0006_proctor.py  0007_integrations.py  0008_branding.py  0009_ai_settings.py  0010_logo_text.py  0011_categories.py  0012_candidate_stage.py  0013_pause_credit.py  0014_recording.py  0015_google_oauth.py  0016_google_oauth_domain.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/core/: config.py  database.py  rbac.py  security.py
backend/app/models/: __init__.py  attempt.py  base.py  candidate.py  category.py  enums.py  integration.py  organization.py  proctor.py  question.py  result.py  schedule.py  test.py  user.py
backend/app/schemas/: __init__.py  ai.py  ai_settings.py  apply.py  auth.py  branding.py  candidate.py  category.py  common.py  exam.py  integration.py  question.py  recording_settings.py  result.py  schedule.py  sso_settings.py  test.py  user.py
backend/app/services/: analytics.py  candidates.py  categories.py  claude_auth.py  email.py  exam.py  grading.py  integrations.py  judge0.py  pagination.py  plagiarism.py  proctoring.py  questions.py  recording.py  results.py  schedules.py  tests.py  users.py
backend/tests/: test_ai.py  test_health.py  test_judge0.py
(+87 files in other folders)
